--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+html, body, ul {
   margin: 0;
   padding: 0;
   font-family: 'Open sans', sans-serif;
@@ -9,15 +9,15 @@ ul {
 }
 
 .container {
-  display: flex;
   height: 100vh;
   position: relative;
 }
 
 /* side bar */
 
-.sidebar {
+.side-bar {
   width: 410px;
+  display: inline-block;
   height: 100%;
   position: relative;
 }
@@ -66,6 +66,308 @@ ul {
   box-sizing: border-box;
 }
 
+.fas.fa-bell-slash {
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  line-height: 45px;
+  border-radius: 50%;
+  font-size: 18px;
+  color: #9de1fe;
+  background-color: #F5FCFF;
+  position: absolute;
+  top: 20px;
+  left: 15px;
+}
+
+.notification-container p {
+  margin: 0;
+}
+
+.notification-container .receive-notification {
+  font-size: 15px;
+  margin-bottom: 3px;
+}
+
+.active-notification {
+  font-size: 13px;
+}
+
+/* search container */
+.search-container {
+  height: 50px;
+  width: 100px;
+  padding-left: 7.5px;
+  padding-top: 7.5px;
+  background-color: #f8f8f8;
+  position: relative;
+  color: #BDC1c3;
+  box-sizing: border-box;
+}
+
+#contact-search {
+  position: absolute;
+  left: 30px;
+  top: 18px;
+  font-size: 14px;
+}
+
+#search {
+  border: none;
+  height: 35px;
+  width: 385px;
+  padding-left: 60px;
+  border-radius: 17.5px;
+  background-color: #FFF;
+  box-sizing: border-box;
+}
+
+#search::placeholder {
+  color: #BDC1c3;
+}
+
+/* contacts container */
+
+.contacts-container {
+  height: auto;
+  background-color: #FFF;
+}
+
+.contact-box {
+  cursor: pointer;
+  height: 72px;
+  background-color: #FFF;
+  border-top: 1px solid #F2F2F2;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.contact-box:last-child {
+  border-bottom: 1px solid #F2F2F2;
+}
+
+.contact-box:hover {
+  background-color: #f4f5f5;
+}
+
+.active-chat {
+  background-color: #e9ebeb;
+}
+
+.active-chat.contact-box:hover {
+  background-color: #e9ebeb;
+}
+
+.contact-box .user-photo {
+  width: 50px;
+}
+
+.user-info {
+  margin-left: 80px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+.user-info p, 
+.message-info p {
+  margin: 0;
+}
+
+.user-name {
+  font-size: 16px;
+  color: #000;
+  margin-bottom: 12px;
+}
 
 
+.user-messagepreview {
+  font-size: 14px;
+  color: #454545;
+}
 
+.fa-check-double {
+  margin-right: 5px;
+  color: #4fc3f7
+}
+
+.message-info {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  display: inline-block;
+}
+
+.message-info .message-time {
+  font-size: 12px;
+  margin-bottom: 5px;
+  color: #ccc
+}
+
+.message-pending {
+  background-color: #09d261;
+  color: #fff;
+  width: 19px;
+  height: 19px;
+  line-height: 19px;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 50%;
+  text-align: center;
+  float: right;
+}
+
+/* chat */
+
+.chat-container {
+  position: absolute;
+  top: 0;
+  left: 410px;
+  width: calc(100% - 410px);
+  height: 100%;
+  background-color: #ccc;
+}
+
+/* chat navbar */
+.chat-navbar {
+  height: 60px;
+  background-color: #EEE;
+  border-left: 1px solid #DDD;
+  padding-left: 75px;
+}
+
+.chat-navbar p {
+  margin: 0;
+}
+
+.contactinfo-container {
+  display: inline-block;
+}
+
+.contactinfo-container .user-name{
+  font-size: 16px;
+  height: 60px;
+  line-height: 60px;
+}
+
+.chattools-container {
+  float: right;
+  display: inline-block;
+  height: 60px;
+  line-height: 60px;
+  margin-right: 20px;
+}
+
+.chattools-container li {
+  display: inline-block;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 18px;
+  color: #80868a;
+ cursor: pointer; 
+}
+
+/* nessages */
+
+.message-container {
+  background-color: #E1DAD2;
+  height: calc(100% - 120px);
+  position: relative;
+}
+
+.message-container  p{
+  margin: 0;
+}
+
+.bg-image {
+  background-image: url('./img/background_whats.png');
+  background-repeat: repeat;
+  opacity: .06;
+  width: 100%;
+  height: 100%;
+}
+
+.chat-messages {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  padding: 30px 80px;
+  box-sizing: border-box;
+}
+
+.chat-messages p {
+  display: block;
+  color: #262626;
+  font-size: 14px;
+  padding: 7px;
+  border-radius: 7px;
+  position: relative;
+  width: 200px;
+  margin-top: 1em;
+}
+.guest-message {
+  background-color: #fff;
+}
+
+.guest-message:before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-bottom: 17px solid transparent;
+  border-right: 17px solid #fff;
+  position: absolute;
+  top: 0;
+  left: -10px;
+}
+
+.user-message {
+  float: right;
+  background-color: #dcf8c6;
+}
+
+.user-message:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-bottom: 17px solid transparent;
+  border-left: 17px solid #dcf8c6;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+
+/* send message */
+
+.sendmessage-container {
+  background-color: #efefef;
+  border-left: 1px solid #DDD;
+  height: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+}
+
+#chatmessage {
+  position: absolute;
+  top: 10px;
+  left: 60px;
+  background-color: #fff;
+  border: none;
+  height: 40px;
+  border-radius: 20px;
+  padding-left: 20px;
+  font-size: 16px;
+  width: 815px;
+}
+
+.sendmessage-container i {
+  font-size: 24px;
+  color: #80868a;
+  cursor: pointer;
+  height: 60px;
+  line-height: 60px;
+}
+.fa-microphone {
+  float: right;
+}
